add object Id validation

--- a/specification/specification.yml
+++ b/specification/specification.yml
@@ -220,7 +220,7 @@ paths:
       "500":
         description: Сервер недоступен
 
-    put:
+    patch:
       tags:
        - offers
       summary: Редактирование предложения
