--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "12.4.0",
+    "@types/mime-types": "2.1.4",
+    "@types/multer": "1.4.11",
     "chalk": "^5.3.0",
     "class-transformer": "0.5.1",
     "class-validator": "^0.14.1",
@@ -53,7 +55,9 @@
     "got": "14.2.1",
     "http-status-codes": "2.3.0",
     "inversify": "6.0.2",
+    "mime-types": "2.1.35",
     "mongoose": "8.3.4",
+    "multer": "1.4.5-lts.1",
     "pino": "9.0.0",
     "reflect-metadata": "0.2.2",
     "tslib": "2.6.2"
